# rocknroll

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.claude/: settings.json
.claude/agents/: claude-desktop-setup.md  code.md  coder.md  debugger.md  devops.md  docs.md  orchestrator.md  planner.md  review.md  reviewer.md  test.md  tester.md
.claude/commands/: code-review.md  debug.md  personality.md  plan-mode.md
.claude/hooks/scripts/: hooks.py
.claude/rules/: agent-core.md  claude-desktop-setup.md
.claude/skills/add-tests/: SKILL.md
.claude/skills/claude-agentic-setup/: SKILL.md
.codex/: config.toml
.codex/agents/: code.md  code.toml  orchestrator.md  orchestrator.toml  review.md  review.toml  test.md  test.toml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  app.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/audio/: mod.rs  recorder.rs
src-tauri/src/commands/: mod.rs  voice.rs
src-tauri/src/stt/: mod.rs  model_download.rs  whisper.rs
src/app/: AppShell.css  AppShell.integration.test.tsx  AppShell.tsx
src/container/: container.ts
src/domain/: contracts.ts
src/hooks/: useVoice.ts
src/repository/: interfaces.ts
src/services/: interfaces.ts
src/state/: AppStoreContext.tsx  app-store-context.tsx  app-store.test.ts  app-store.ts  appStore.test.ts  appStore.ts
src/test/: render-with-providers.tsx  renderWithProviders.tsx  setup.ts
src/types/: contracts.ts
(+97 files in other folders)
