[package]
name = "rocknroll"
version = "0.1.0"
description = "rocknroll desktop app scaffold"
authors = ["choscor"]
license = "MIT"
repository = "https://github.com/choscor/rocknroll"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
portable-pty = "0.9"
rfd = "0.14"
cpal = "0.15"
hound = "3"
whisper-rs = "0.10"
once_cell = "1.19"
anyhow = "1.0"
num_cpus = "1.16"
reqwest = { version = "0.12", features = ["blocking"] }
